# albumentations-demo

./: .gitignore  .pre-commit-config.yaml  .pylintrc  LICENSE  README.md  get_unresolved_transforms.py  pyproject.toml  requirements.txt  requirements_dev.txt  requirments_dev.txt  setup.cfg
.github/workflows/: ci.yml
.streamlit/: config.toml
configs/: augmentations.yml  blur.yml  crops.yml  dropout.yml  geometric.yml  noise.yml
src/: app.py  control.py  utils.py  visuals.py
src/utils/: constants.py  helpers.py
tests/: test_utils.py
